Revision history for Perl extension Geo::GDAL::FFI

0.06
     - Refuse to handle 64 bit int data in non-64 bit Perl
     - Handle CSL arguments in GDAL API
     - Layer Intersection etc methods
     - Geometry exporter methods
     - Initialization in BEGIN

0.05_03 May 16, 2018 (yet another test release)
     - Set GDAL_DATA only if gdal.pc is found and datadir exists.

0.05_02 May 16, 2018 (yet another test release)
     - If Perl does not support 64 bit integers, frown upon them as field values

0.05 May 16, 2018
     - Explitly set GDAL_DATA

0.04 May 2, 2018
     - HaveGEOS method for tests.

0.03 Apr 27, 2018
     - Replace failed 0.02.

0.02 Apr 27, 2018
    - Fix get/set for GDAL metadata.
    - Separate classes into their own files.

0.01 Apr 6, 2018
    - Included all basic functionality but lots of docs and methods to do.
    