@@ -3,15 +3,14 @@ use strict;
 use warnings;
 use Carp;
 use Encode qw(decode encode);
-use Geo::GDAL::FFI;
+use Geo::GDAL::FFI qw/GetDriver Open/;
 use Test::More;
 use Data::Dumper;
 use JSON;
 use FFI::Platypus::Buffer;
 
 {
-    my $gdal = Geo::GDAL::FFI->get_instance();
-    my $ds = $gdal->GetDriver('ESRI Shapefile')->Create('test.shp');
+    my $ds = GetDriver('ESRI Shapefile')->Create('test.shp');
     my $sr = Geo::GDAL::FFI::SpatialReference->new(EPSG => 3067);
     my $l = $ds->CreateLayer({Name => 'test', SpatialReference => $sr, GeometryType => 'Point'});
     my $d = $l->GetDefn();
@@ -22,8 +21,7 @@ use FFI::Platypus::Buffer;
 my $ds;
 
 eval {
-    my $gdal = Geo::GDAL::FFI->get_instance();
-    $ds = $gdal->Open('test.shp', {
+    $ds = Open('test.shp', {
         Flags => [qw/READONLY VERBOSE_ERROR/], 
         AllowedDrivers => [('GML')]
     });
@@ -33,8 +31,7 @@ $e[0] =~ s/ at .*//;
 ok($@, "Right driver not in AllowedDrivers: ".$e[0]);
 
 eval {
-    my $gdal = Geo::GDAL::FFI->get_instance();
-    $ds = $gdal->Open('test.shp', {
+    $ds = Open('test.shp', {
         Flags => [qw/READONLY VERBOSE_ERROR/], 
         AllowedDrivers => [('GML', 'ESRI Shapefile')]
     });
